# simple_rate_calc

./: Cargo.toml  README.md
src/: calc.rs  data.rs  main.rs  recipe_builder.rs  saveload.rs
