[package]
name = "simple_rate_calc"
version = "0.9.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
native-dialog = "0.9.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
